style(footer): fixed logo alignment
Moved the logo span slightly to the left so it lines up with the breach report link

--- a/public/style.css
+++ b/public/style.css
@@ -120,7 +120,7 @@ footer {
 }
 
 #iconsSpan {
-    margin-left: calc((50vw - 83px));
+    margin-left: calc((50vw - 90px));
 }
 
 #duckFact {
